--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,9 +1,69 @@
 main:
   - 
     id: 0
+    name: "Ahirton"
+    surname: "Lopes"
+    title: ""
+    thumbnailUrl: AhirtonLopes.jpeg
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/ahirton/"}
+      - {name: "github", link: "https://github.com/ahirtonlopes"}
+  - 
+    id: 1
+    name: "Felipe"
+    surname: "Pereira"
+    title: ""
+    thumbnailUrl: FelipePereira.jpeg
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/pereira-felipe/"}
+  - 
+    id: 2
+    name: "Guto"
+    surname: "Xavier"
+    title: ""
+    thumbnailUrl: GutoXavier.jpeg
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/gutoxavier/"}
+  - 
+    id: 3
+    name: "Mikaeri"
+    surname: "Ohana"
+    title: ""
+    thumbnailUrl: MikaeriOhana.jpeg
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/mikaeriohana/"}
+      - {name: "twitter", link: "https://twitter.com/mikaeriohana"}
+      - {name: "instagram", link: "https://instagram.com/miohana"}
+  - 
+    id: 4
+    name: "Pedro"
+    surname: "Lelis"
+    title: ""
+    thumbnailUrl: PedroLelis.png
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/pedrolelis/"}
+      - {name: "github", link: "https://github.com/pedrolelis"}
+      - {name: "facebook", link: "https://www.facebook.com/pedroaugusto.lelis"}
+  - 
+    id: 5
     name: "Thaissa"
     surname: "Candella"
-    title: "Direção Geral (Wonder Woman)"
+    title: ""
     thumbnailUrl: ThaissaCandella.jpeg
     team: true
     ribbon: 
@@ -11,70 +71,82 @@ main:
     social: 
       - {name: "linkedin", link: "https://www.linkedin.com/in/thaissacandella/"}
       - {name: "facebook", link: "https://www.facebook.com/thaissa.candella"}
-  - 
-    id: 1
-    name: "Henrique"
-    surname: "Candella"
-    title: "Operacional/Design (LeBron James)"
-    thumbnailUrl: HenriqueCandella.jpg
-    team: true
-    ribbon: 
-      - {abbr: "GDG", title: "Google Developer Group"}
-    social: 
-      - {name: "linkedin", link: "https://www.linkedin.com/in/henrique-candella-565a93133/"}
-      - {name: "facebook", link: "https://www.facebook.com/profile.php?id=100014317275586"}
-  - 
-    id: 3
-    name: "Rodrigo"
-    surname: "Botti"
-    title: "Website (Tony Stark)"
-    thumbnailUrl: RodrigoBotti.jpeg
-    team: true
-    social:
-      - {name: "linkedin", link: "https://www.linkedin.com/in/rodrigo-botti/"}
-      - {name: "facebook", link: "https://www.facebook.com/rodrigo.botti.9"}
-  - 
-    id: 8
-    name: "Lucas"
-    surname: "Camarotto"
-    title: "Junior"
-    thumbnailUrl: Camarotto.jpg
-    team: true
-    social: []
+#   - 
+#     id: 0
+#     name: "Thaissa"
+#     surname: "Candella"
+#     title: "Direção Geral (Wonder Woman)"
+#     thumbnailUrl: ThaissaCandella.jpeg
+#     team: true
+#     ribbon: 
+#       - {abbr: "GDG", title: "Google Developer Group"}
+#     social: 
+#       - {name: "linkedin", link: "https://www.linkedin.com/in/thaissacandella/"}
+#       - {name: "facebook", link: "https://www.facebook.com/thaissa.candella"}
+#   - 
+#     id: 1
+#     name: "Henrique"
+#     surname: "Candella"
+#     title: "Operacional/Design (LeBron James)"
+#     thumbnailUrl: HenriqueCandella.jpg
+#     team: true
+#     ribbon: 
+#       - {abbr: "GDG", title: "Google Developer Group"}
+#     social: 
+#       - {name: "linkedin", link: "https://www.linkedin.com/in/henrique-candella-565a93133/"}
+#       - {name: "facebook", link: "https://www.facebook.com/profile.php?id=100014317275586"}
+#   - 
+#     id: 3
+#     name: "Rodrigo"
+#     surname: "Botti"
+#     title: "Website (Tony Stark)"
+#     thumbnailUrl: RodrigoBotti.jpeg
+#     team: true
+#     social:
+#       - {name: "linkedin", link: "https://www.linkedin.com/in/rodrigo-botti/"}
+#       - {name: "facebook", link: "https://www.facebook.com/rodrigo.botti.9"}
+#   - 
+#     id: 8
+#     name: "Lucas"
+#     surname: "Camarotto"
+#     title: "Junior"
+#     thumbnailUrl: Camarotto.jpg
+#     team: true
+#     social: []
 
-support:
-  - 
-    id: 4
-    name: "Felipe"
-    surname: "Pereira"
-    title: "Coordenador de Conteúdo"
-    thumbnailUrl: FelipePereira.jpg
-    support: true
-    social: 
-      - {name: "linkedin", link: "https://www.linkedin.com/in/felipe-pereira-dba/"}
-  -
-    id: 5
-    name: "Ahirton"
-    surname: "Lopes"
-    title: "Curadoria"
-    thumbnailUrl: AhirtonLopes.jpg
-    support: true
-    social:
-      - { name: "linkedin", link: "https://www.linkedin.com/in/ahirton/" }
-  -
-    id: 6
-    name: "Italo"
-    surname: "José"
-    title: "Curadoria"
-    thumbnailUrl: ItaloJose.jpg
-    support: true
-    social: []
-  -
-    id: 7
-    name: "Thaissa"
-    surname: "Sanches"
-    title: "Curadoria"
-    thumbnailUrl: ThaissaSanches.jpg
-    support: true
-    social: []
+# support:
+#   - 
+#     id: 4
+#     name: "Felipe"
+#     surname: "Pereira"
+#     title: "Coordenador de Conteúdo"
+#     thumbnailUrl: FelipePereira.jpg
+#     support: true
+#     social: 
+#       - {name: "linkedin", link: "https://www.linkedin.com/in/felipe-pereira-dba/"}
+#   -
+#     id: 5
+#     name: "Ahirton"
+#     surname: "Lopes"
+#     title: "Curadoria"
+#     thumbnailUrl: AhirtonLopes.jpg
+#     support: true
+#     social:
+#       - { name: "linkedin", link: "https://www.linkedin.com/in/ahirton/" }
+#   -
+#     id: 6
+#     name: "Italo"
+#     surname: "José"
+#     title: "Curadoria"
+#     thumbnailUrl: ItaloJose.jpg
+#     support: true
+#     social: []
+#   -
+#     id: 7
+#     name: "Thaissa"
+#     surname: "Sanches"
+#     title: "Curadoria"
+#     thumbnailUrl: ThaissaSanches.jpg
+#     support: true
+#     social: []
   
