--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,14 @@ statisticBlock:
  - {count: "30", specialCharacter: "+", info: "palestrantes", detail: "referências no assunto"}
  - {count: "600", specialCharacter: "+", info: "participantes", detail: "de Campinas e região"}
 
-# # Latest News Block
-# latestNewsTitle: "Últimas notícias"
+# Latest News Block
+latestNewsTitle: "Últimas notícias"
+latestNewsLeft:
+  title: "Call4papers"
+  content: "Quer dividir seus conhecimentos com a comunidade? O call4papers está aberto até dia 25 de outubroe e as submissões podem ser em formato de Talk, Painel, Dojo ou  Workshop."
+latestNewsRight:
+  title: "Hello World!"
+  content: "O GDG DataFest 2019 será realizado nos dias 10 e 11 de dezembro. No primeiro dia do evento iremos no encontrar na Faculdade de Engenharia Elétrica e de Computação (FEEC) para aprender colocando a mão na massa em diferentes workshops. No segundo dia do evento iremos nos encontrar no Centro de Convenções da Unicamp para discutir sobre dados em 3 trilhas simultâneas. Quer garantir a sua entrada? Aproveite o preço promocional do primeiro lote e adiquira seu ingresso."
 
 # Location Block
 locationBlockTitle: "Localização"
@@ -118,8 +124,8 @@ venueFeatures: ["3 auditórios", "+200 participantes por auditório", "Estaciona
 # Rockstar Speakers Block
 rockstarSpeakersImage: "background-speakers.jpg"
 rockstarSpeakersCount: 4
-rockstarSpeakersTitle: "Palestrantes passados"
-rockstarSpeakersButtonText: "Veja todos os palestrantes do DataFest 18"
+rockstarSpeakersTitle: "Palestrantes confirmados"
+rockstarSpeakersButtonText: "Veja todos os palestrantes do DataFest 19"
 
 # Media
 media:
