Atualização Time + Minor fixes

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,6 @@ eventDate: "10 e 11 de dezembro de 2019"
 typeoutTextValues: '"", "Campinas", "Science", "Engineering", "Business", "Workshops"'
 typeoutFallback: "Campinas"
 heroButtons:
- - {link: "https://forms.gle/zckpzgGEX8rBRHyE8", text: "Call4speakers"}
  - {permalink: "/#tickets", text: "Ingressos"}
 
 # About Block
@@ -88,10 +87,10 @@ statisticBlock:
 latestNewsTitle: "Últimas notícias"
 latestNewsLeft:
   title: "Call4papers"
-  content: "Quer dividir seus conhecimentos com a comunidade? O call4papers está aberto até dia 25 de outubroe e as submissões podem ser em formato de Talk, Painel, Dojo ou  Workshop."
+  content: "Quer dividir seus conhecimentos com a comunidade? O call4papers está aberto até dia 25 de outubro e as submissões podem ser em formato de Talk, Painel, Dojo ou  Workshop."
 latestNewsRight:
   title: "Hello World!"
-  content: "O GDG DataFest 2019 será realizado nos dias 10 e 11 de dezembro. No primeiro dia do evento iremos no encontrar na Faculdade de Engenharia Elétrica e de Computação (FEEC) para aprender colocando a mão na massa em diferentes workshops. No segundo dia do evento iremos nos encontrar no Centro de Convenções da Unicamp para discutir sobre dados em 3 trilhas simultâneas. Quer garantir a sua entrada? Aproveite o preço promocional do primeiro lote e adiquira seu ingresso."
+  content: "O GDG DataFest 2019 será realizado nos dias 10 e 11 de dezembro. No primeiro dia do evento iremos nos encontrar na <a href='https://www.fee.unicamp.br/' target='_blank'>Faculdade de Engenharia Elétrica e de Computação (FEEC)</a> para aprender colocando a mão na massa em diferentes workshops. No segundo dia do evento iremos nos encontrar no <a href='https://www.cdc.proec.unicamp.br/' target='_blank'>Centro de Convenções da Unicamp</a> para discutir sobre dados em 3 trilhas simultâneas. Quer garantir a sua entrada? Aproveite o preço promocional do primeiro lote e adiquira seu ingresso."
 
 # Location Block
 locationBlockTitle: "Localização"
@@ -187,7 +186,7 @@ ticketsOffers:
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "11/10/2019T00:00"
   validThrough: "10/12/2019T23:59"
-  disabled: true
+  disabled: false
   soldOut: false
   soldOutText: "Esgotado"
  -
