--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -38,7 +38,7 @@
   company: "GDE GCP"
   title: "GDE GCP"
   bio: ""
-  thumbnailUrl: LucasArruda.jpg
+  thumbnailUrl: LucasArruda.png
   rockstar: true
   ribbon: 
     - {abbr: "GDE", title: "Google Developer Expert", url: "https://developers.google.com/experts/"}
