--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ latestNewsLeft:
   content: "Quer dividir seus conhecimentos com a comunidade? O call4papers está aberto até dia 25 de outubro e as submissões podem ser em formato de Talk, Painel, Dojo ou  Workshop."
 latestNewsRight:
   title: "Hello World!"
-  content: "O GDG DataFest 2019 será realizado nos dias 10 e 11 de dezembro. No primeiro dia do evento iremos nos encontrar na <a href='https://www.fee.unicamp.br/' target='_blank'>Faculdade de Engenharia Elétrica e de Computação (FEEC)</a> para aprender colocando a mão na massa em diferentes workshops. No segundo dia do evento iremos nos encontrar no <a href='https://www.cdc.proec.unicamp.br/' target='_blank'>Centro de Convenções da Unicamp</a> para discutir sobre dados em 3 trilhas simultâneas. Quer garantir a sua entrada? Aproveite o preço promocional do primeiro lote e adiquira seu ingresso."
+  content: "O GDG DataFest 2019 será realizado nos dias 10 e 11 de dezembro. No primeiro dia do evento iremos nos encontrar na <a href='https://www.fee.unicamp.br/' target='_blank'>Faculdade de Engenharia Elétrica e de Computação (FEEC)</a> para aprender colocando a mão na massa em diferentes workshops. No segundo dia do evento iremos nos encontrar no <a href='https://www.cdc.proec.unicamp.br/' target='_blank'>Centro de Convenções da Unicamp</a> para discutir sobre dados em 3 trilhas simultâneas. Quer garantir a sua entrada? Aproveite o preço promocional do primeiro lote e adquira seu ingresso."
 
 # Location Block
 locationBlockTitle: "Localização"
