--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ navigationLinks:
  - {permalink: "/", text: "Principal"}
 #  - {permalink: "/blog/", text: "Blog"}
 #  - {permalink: "/schedule/", text: "Grade"}
-#  - {permalink: "/speakers/", text: "Palestrantes"}
+ - {permalink: "/speakers/", text: "Palestrantes"}
  - {permalink: "/team/", text: "Time"}
 #  - {permalink: "/logistics/", text: "Logistics"}
 #  - {permalink: "/hackathon/", text: "Hackathon"}
@@ -61,7 +61,7 @@ rightNavigationButtons:
 # Hero Block
 heroImage: "datacenter.jpg"
 heroTitle: "GDG DataFest 19 <typeout> "
-eventDate: "11 de dezembro de 2019"
+eventDate: "10 e 11 de dezembro de 2019"
 typeoutTextValues: '"", "Campinas", "Science", "Engineering", "Business", "Workshops"'
 typeoutFallback: "Campinas"
 heroButtons:
@@ -83,8 +83,14 @@ statisticBlock:
  - {count: "30", specialCharacter: "+", info: "palestrantes", detail: "referências no assunto"}
  - {count: "600", specialCharacter: "+", info: "participantes", detail: "de Campinas e região"}
 
-# # Latest News Block
-# latestNewsTitle: "Últimas notícias"
+# Latest News Block
+latestNewsTitle: "Últimas notícias"
+latestNewsLeft:
+  title: "Call4papers"
+  content: "Quer dividir seus conhecimentos com a comunidade? O call4papers está aberto até dia 25 de outubro e as submissões podem ser em formato de Talk, Painel, Dojo ou  Workshop."
+latestNewsRight:
+  title: "Hello World!"
+  content: "O GDG DataFest 2019 será realizado nos dias 10 e 11 de dezembro. No primeiro dia do evento iremos nos encontrar na <a href='https://www.fee.unicamp.br/' target='_blank'>Faculdade de Engenharia Elétrica e de Computação (FEEC)</a> para aprender colocando a mão na massa em diferentes workshops. No segundo dia do evento iremos nos encontrar no <a href='https://www.cdc.proec.unicamp.br/' target='_blank'>Centro de Convenções da Unicamp</a> para discutir sobre dados em 3 trilhas simultâneas. Quer garantir a sua entrada? Aproveite o preço promocional do primeiro lote e adquira seu ingresso."
 
 # Location Block
 locationBlockTitle: "Localização"
@@ -117,8 +123,8 @@ venueFeatures: ["3 auditórios", "+200 participantes por auditório", "Estaciona
 # Rockstar Speakers Block
 rockstarSpeakersImage: "background-speakers.jpg"
 rockstarSpeakersCount: 4
-rockstarSpeakersTitle: "Palestrantes passados"
-rockstarSpeakersButtonText: "Veja todos os palestrantes do DataFest 18"
+rockstarSpeakersTitle: "Palestrantes confirmados"
+rockstarSpeakersButtonText: "Veja todos os palestrantes do DataFest 19"
 
 # Media
 media:
@@ -151,10 +157,40 @@ partnersC4sponsorsButton: "Seja um patrocinador"
 
 # Tickets Block
 ticketsTitle: "Ingressos"
-ticketsInfo: "Os ingressos dão acesso a todas as trilhas e coffee breaks."
+ticketsInfo: "Os ingressos dos workshops dão acesso a todos os workshops no dia 10 de dezembro e os ingressos da conferência dão acesso a todas as trilhas no dia 11 de dezembro. Ingressos dos workshops não serão aceitos para entrada na conferência e ingressos da conferência não serão aceitos para entrada nos workshops.<br><br>A entrada com ingressos de estudantes será permitida somente com a apresentação de um coprovante válido (carteirinha, boleto de mensalidade, etc.). Em caso de não apresentação de um comprovante válido, a entrada será negada e os ingressos não serão reembolsados e nem será aceito pagamento da diferença para adquirir o ingresso inteiro."
 ticketsOffers:
  -
-  name: "Early Bird"
+  name: "Apenas Camiseta"
+  price: "30,00"
+  priceCurrency: "R$"
+  # ticketsNumber: "200"
+  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
+  buyButtonText: "Comprar"
+  # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
+  # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
+  validFrom: "11/09/2018T00:00"
+  validThrough: "30/11/2018T23:59"
+  disabled: false
+  soldOut: false
+  soldOutText: "Esgotado"
+ -
+  name: "Workshops 10/12"
+  price: "150,00"
+  priceCurrency: "R$"
+  ticketsNumber: "120"
+  # ribbon: "-20%"
+  # featured: true
+  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
+  buyButtonText: "Comprar"
+  # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
+  # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
+  validFrom: "11/10/2019T00:00"
+  validThrough: "10/12/2019T23:59"
+  disabled: false
+  soldOut: false
+  soldOutText: "Esgotado"
+ -
+  name: "Conferência 11/12 <br> Early Bird"
   price: "100,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -170,7 +206,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Early Bird Estudante"
+  name: "Conferência 11/12 <br> Early Bird Estudante"
   price: "50,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -186,7 +222,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Normal Bird"
+  name: "Conferência 11/12 <br> Normal Bird"
   price: "150,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -202,7 +238,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Normal Bird Estudante"
+  name: "Conferência 11/12 <br> Normal Bird Estudante"
   price: "75,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -218,7 +254,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Late Bird"
+  name: "Conferência 11/12 <br> Late Bird"
   price: "200,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -234,7 +270,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Late Bird Estudante"
+  name: "Conferência 11/12 <br> Late Bird Estudante"
   price: "100,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -247,36 +283,6 @@ ticketsOffers:
   validFrom: "11/11/2019T00:00"
   validThrough: "11/12/2019T23:59"
   disabled: true
-  soldOut: false
-  soldOutText: "Esgotado"
- -
-  name: "Apenas Workshops"
-  price: "150,00"
-  priceCurrency: "R$"
-  ticketsNumber: "120"
-  # ribbon: "-20%"
-  # featured: true
-  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
-  buyButtonText: "Comprar"
-  # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
-  # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "11/10/2019T00:00"
-  validThrough: "10/12/2019T23:59"
-  disabled: true
-  soldOut: false
-  soldOutText: "Esgotado"
- -
-  name: "Apenas Camiseta"
-  price: "30,00"
-  priceCurrency: "R$"
-  # ticketsNumber: "200"
-  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
-  buyButtonText: "Comprar"
-  # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
-  # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "11/09/2018T00:00"
-  validThrough: "30/11/2018T23:59"
-  disabled: false
   soldOut: false
   soldOutText: "Esgotado"
 
