--- a/_data/team.yml
+++ b/_data/team.yml
@@ -93,6 +93,28 @@ main:
     social: 
       - {name: "linkedin", link: "https://www.linkedin.com/in/eliezerzarpelao/"}
       - {name: "github", link: "https://github.com/elizarp"}
+  -
+    id: 8
+    name: "Douglas"
+    surname: "Esteves"
+    title: ""
+    thumbnailUrl: DouglasEsteves.jpeg
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/douglasesteves/"}
+  -
+    id: 9
+    name: "Thonia"
+    surname: "Senna"
+    title: ""
+    thumbnailUrl: ThoniaSenna.jpeg
+    team: true
+    ribbon: 
+      - {abbr: "GDG", title: "Google Developer Group"}
+    social: 
+      - {name: "linkedin", link: "https://www.linkedin.com/in/thonia-senna-52a69740/?originalSubdomain=br"}
 #   - 
 #     id: 0
 #     name: "Thaissa"
