--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,7 +1,7 @@
 
 - 
   date: "2019-11-10"
-  dateReadable: "10 de Outubro"
+  dateReadable: "10 de Dezembro"
   tracks: 
     - {title: "Workshops", color: "#56D3B4"}
   timeslots:
@@ -9,7 +9,7 @@
 
 - 
   date: "2019-11-11"
-  dateReadable: "11 de Outubro"
+  dateReadable: "11 de Dezembro"
   tracks: 
     - {title: "Science", color: "#90BE4E"}
     - {title: "Engineering", color: "#03A9F4"}
